--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
     </div>
 
-    <p id="demo"></p>
+    <p id="countdown"></p>
 
-    <script src="./src/js/index.js"></script>
+    <script src="./src/js/countdown.js"></script>
 </body>
 
 </html>
